--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></scri
         <meta property="og:description" content="15,000 NAIRA BOLA AHMED TINUBU Happy Eid-ul-Fitr 2023:.
 
  !">
-        <meta property="og:image" itemprop="image" content="2.png">
+        <meta property="og:image" itemprop="image" content="img.png">
         <meta property="og:type" content="website">
         <meta property="fb:app_id" content="966242223397117">
         <meta property="og:url" content="http://nassp.gov.ng /">
@@ -40,7 +40,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></scri
 5,000 NAIRA BOLA AHMED TINUBU Happy Eid-ul-Fitr 2023: FUNDS.
 
  </h3>
-					<img src="2.png" width="400 alt=" logo"="" class="logo"></center>
+					<img src="img.png" width="400 alt=" logo"="" class="logo"></center>
 					<br>
 						<marquee style="color:rgb(240, 17, 17)"> 5,000 NAIRA BOLA AHMED TINUBU Happy Eid-ul-Fitr 2023: FUNDS
  </marquee>
