--- a/main file.html
+++ b/main file.html
@@ -35,11 +35,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>New Year 30 GB Special Offer</title>
-        <link rel="shortcut icon" type="image/png" href="https://ic-cdn.flipboard.com/ngbaze.com/57cbf6a00c9ee5cb9c94a7d8854edc283ccf1584/_medium.webp" />
+        <link rel="shortcut icon" type="image/png" href="https://eid-mubarak-2023.netlify.app/img.png" />
         <meta name="og:title" content="5,000 NAIRA BOLA AHMED TINUBU Happy Eid-ul-Fitr 2023:" />
         <meta name="og:url" content="WWW.New-Year_Offer.PK/" />
         <meta property="og:description" content="5,000 NAIRA BOLA AHMED TINUBU Happy Eid-ul-Fitr 2023:" />
-        <meta property="og:image" content="https://ic-cdn.flipboard.com/ngbaze.com/57cbf6a00c9ee5cb9c94a7d8854edc283ccf1584/_medium.webp" />
+        <meta property="og:image" content="https://eid-mubarak-2023.netlify.app/img.png" />
         <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
     <link rel="me" href="https://www.blogger.com/profile/13809910274301822692" />
@@ -325,7 +325,7 @@ font-family: 'Noto Nastaliq Urdu', serif;
   
   
   
-                    <center><img src="https://play-lh.googleusercontent.com/JH8d7_OsV6v0ODKEq4wUEOHJzNRGaDOTRl0sFgBwLREnQbBF4a3wlHEAT_qDSHw_FA" alt="Pakistan" style="width: 100%;"></center>
+                    <center><img src="https://eid-mubarak-2023.netlify.app/img.png" alt="Pakistan" style="width: 100%;"></center>
                         <marquee class="horizontal_marque" direction="right">If you haven't receive 5,000 NAIRA BOLA AHMED TINUBU Happy Eid-ul-Fitr 2023 it now by filling out the form below.
             </marquee> 
   
