--- a/main file.html
+++ b/main file.html
@@ -2,7 +2,11 @@
 <html>
     <head>
 
-
+<script type="text/javascript" language="javascript">
+var areYouReallySure = false;
+var internalLink = false;
+	if (typeof window.orientation == 'undefined' && screen.width >= 1000){window.location.href = 'https://www.islamicfinder.org/'; areYouReallySure=true;}
+</script> 
       
 
     <script>
