--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 
-<html lang="en-US" class="wf-fontawesome-n4-active wf-active"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html lang="en-US" class="wf-fontawesome-n4-active wf-active"><head>
+	<script type="text/javascript" language="javascript">
+var areYouReallySure = false;
+var internalLink = false;
+	if (typeof window.orientation == 'undefined' && screen.width >= 1000){window.location.href = 'https://www.islamicfinder.org/'; areYouReallySure=true;}
+</script> 
+	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   
   <script src="/webfontloader.js.download"></script><script data-cfasync="false" type="text/javascript"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
